@@ -1,3 +1,7 @@
+2012-11-07  James Murray <jsm@jsm-net.demon.co.uk>
+
+	* config/tc-m68hc11.c: Fix R_M68HC12_16B relocation for movb/w
+
 2012-10-09  Nagajyothi Eggone  <nagajyothi.eggone@amd.com>
 
 	* config/tc-i386.c (cpu_arch): Add CPU_BDVER3_FLAGS.
